# rust-backend

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  package-lock.json  package.json
migrations/: 20220714202036_add_client.down.sql  20220714202036_add_client.up.sql
queries/: add_client.sql  get_client.sql
source/: style.css
src/: db.rs  main.rs  models.rs  routes.rs  tests.rs
static/: style.css  style.css.map
templates/: add_client.html.tera  client.html.tera  index.html.tera  macros.html.tera  success.html.tera
